# whisper-asr-webservice

./: .dockerignore  .env  .gitignore  404.html  CHANGELOG.md  Dockerfile  Dockerfile.gpu  LICENCE  Makefile  README.md  codefresh.yaml  docker-compose-cpu.yml  docker-compose.gpu.yml  docker-compose.yml  example.env   faster_whisper_model_conversion.sh  index.html  mkdocs.yml  model_conversion.sh  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: docker-gpu-publish.yml  docker-publish.yml  documentation.yml
app/: async_svc.py  config.py  languages.py  utils.py  webservice.py
app/asr_models/: asr_model.py  faster_whisper_engine.py  mbain_whisperx_engine.py  openai_whisper_engine.py
app/factory/: asr_model_factory.py
app/faster_whisper/: core.py  utils.py
app/mbain_whisperx/: core.py
app/openai_whisper/: core.py
app/static/assets/js/: swagger-ui-bundle.js
assets/css/: extra.css
changelog/: index.html
debian/: changelog  control  files  rules
docs/: build.md  endpoints.md  environmental-variables.md  index.md  licence.md  run.md
docs/.overrides/: main.html
endpoints/: index.html
environmental-variables/: index.html
infrastructure/whisper/: Chart.yaml  values.prod.yaml  values.yaml
infrastructure/whisper/templates/: _helpers.tpl  whisper-deployment.yaml  whisper-ingress.yaml
infrastructure/whisper/whisper/: values.prod.yaml
infrastructure/whisper/whisper/templates/: whisper-ingress.yaml  whisper-service.yaml
licence/: index.html
run/: index.html
search/: search_index.json
src/whisper_asr/: languages.py  webservice.py
static/assets/css/: swagger-ui.css
whisper-asr-webservice-main/: .dockerignore  .gitignore
whisper-asr-webservice-main/.github/workflows/: documentation.yml
